<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <FrameLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonsPanel"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:id="@+id/text_view"
            android:layout_marginHorizontal="@dimen/tv_margin_horizontal"
            android:text="@string/zero"
            android:textSize="@dimen/big_text_size"
            android:textColor="@color/white"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_gravity="bottom|end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </FrameLayout>

    <LinearLayout
        android:id="@+id/buttonsPanel"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:paddingVertical="@dimen/vertical_padding"
            android:paddingHorizontal="@dimen/default_button_padding"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_clear"
                android:onClick="onNumberClick"
                style="@style/Gray.Button"
                android:text="@string/clear"
                />
            <com.google.android.material.button.MaterialButton
                android:onClick="onPlusMinusClick"
                android:id="@+id/btn_turn_negative"
                style="@style/Gray.Button"
                android:text="@string/turn_negative"
                android:layout_marginHorizontal="@dimen/default_button_padding"
                />
            <com.google.android.material.button.MaterialButton
                android:onClick="onOperationClick"
                android:id="@+id/btn_percent"
                style="@style/Gray.Button"
                android:text="@string/percent"
                android:layout_marginEnd="@dimen/default_button_padding"
                />
            <com.google.android.material.button.MaterialButton
                android:onClick="onOperationClick"
                android:id="@+id/btn_divide"
                style="@style/Orange.Button"
                android:text="@string/divide"
                />

        </LinearLayout>

        <LinearLayout
            android:paddingVertical="@dimen/vertical_padding"
            android:paddingHorizontal="@dimen/default_button_padding"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:onClick="onNumberClick"
                android:id="@+id/btn_seven"
                style="@style/Dark_Gray.Button"
                android:text="@string/seven"
                />
            <com.google.android.material.button.MaterialButton
                android:onClick="onNumberClick"
                android:id="@+id/btn_eight"
                style="@style/Dark_Gray.Button"
                android:text="@string/eight"
                android:layout_marginHorizontal="@dimen/default_button_padding"
                />
            <com.google.android.material.button.MaterialButton
                android:onClick="onNumberClick"
                android:id="@+id/btn_nine"
                style="@style/Dark_Gray.Button"
                android:text="@string/nine"
                android:layout_marginEnd="@dimen/default_button_padding"
                />
            <com.google.android.material.button.MaterialButton
                android:onClick="onOperationClick"
                android:id="@+id/btn_multiply"
                style="@style/Orange.Button"
                android:text="@string/multiply"
                />

        </LinearLayout>

        <LinearLayout
            android:paddingVertical="@dimen/vertical_padding"
            android:paddingHorizontal="@dimen/default_button_padding"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:onClick="onNumberClick"
                android:id="@+id/btn_four"
                style="@style/Dark_Gray.Button"
                android:text="@string/four"
                />
            <com.google.android.material.button.MaterialButton
                android:onClick="onNumberClick"
                android:id="@+id/btn_five"
                style="@style/Dark_Gray.Button"
                android:text="@string/five"
                android:layout_marginHorizontal="@dimen/default_button_padding"
                />
            <com.google.android.material.button.MaterialButton
                android:onClick="onNumberClick"
                android:id="@+id/btn_six"
                style="@style/Dark_Gray.Button"
                android:text="@string/six"
                android:layout_marginEnd="@dimen/default_button_padding"
                />
            <com.google.android.material.button.MaterialButton
                android:onClick="onOperationClick"
                android:id="@+id/btn_minus"
                style="@style/Orange.Button"
                android:text="@string/minus"
                />

        </LinearLayout>

        <LinearLayout
            android:paddingVertical="@dimen/vertical_padding"
            android:paddingHorizontal="@dimen/default_button_padding"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_one"
                style="@style/Dark_Gray.Button"
                android:onClick="onNumberClick"
                android:text="@string/one"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_two"
                android:onClick="onNumberClick"
                style="@style/Dark_Gray.Button"
                android:text="@string/two"
                android:layout_marginHorizontal="@dimen/default_button_padding"
                />
            <com.google.android.material.button.MaterialButton
                android:onClick="onNumberClick"
                android:id="@+id/btn_three"
                style="@style/Dark_Gray.Button"
                android:text="@string/three"
                android:layout_marginEnd="@dimen/default_button_padding"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_plus"
                android:onClick="onOperationClick"
                style="@style/Orange.Button"
                android:text="@string/plus"
                />

        </LinearLayout>

        <LinearLayout
            android:paddingVertical="@dimen/vertical_padding"
            android:paddingHorizontal="@dimen/default_button_padding"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:onClick="onNumberClick"
                android:id="@+id/btn_zero"
                style="@style/Dark_Gray.Button"
                android:text="@string/zero"
                android:layout_width="@dimen/big_button_width"
                android:textAlignment="textStart"
                android:paddingStart="@dimen/big_button_padding_start"
                android:paddingEnd="@dimen/big_button_padding_end"
                />

            <com.google.android.material.button.MaterialButton
                android:onClick="onNumberClick"
                android:id="@+id/btn_dot"
                style="@style/Dark_Gray.Button"
                android:text="@string/dot"
                android:layout_marginHorizontal="@dimen/default_button_padding"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_equals"
                android:onClick="onResultClick"
                style="@style/Orange.Button"
                android:text="@string/equals"
                />

        </LinearLayout>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>